Fixes alignment of picture caption

--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+
+
 #wrapper {
   margin-left: 150px;
   width:960px;
@@ -28,8 +30,8 @@
   font-style:italic;
   text-align: center;
   font-family: Times;
-  height:20%;
   font-size: 25px;
+  height:20%;
   border-radius: 10px;
   display: inline-block;
   padding: 40px;
@@ -154,7 +156,7 @@ h2 {
 	box-sizing: border-box;
 }
 .container {
-	position: relative;
+	position:relative;
 	display: inline-block;
 	overflow: hidden;
 	height: 300px;
@@ -167,13 +169,13 @@ h2 {
 }
 .container .middle {
 	opacity: 0;
-	position: absolute;
-  margin-top:-300px;
+	position:absolute;
+  margin-top:-350px;
 	width: 400px;
-	height: 300px;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
+	height: 350px;
 	padding: 15px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
 }
 .container:hover .middle,
 .container.active .middle {
@@ -202,4 +204,3 @@ footer {
   font-size:11px;
   margin-left:-150px;
 }
-
